slideshow slider pos fixed. slides can now be full bleed or now with player attr slide_bleed

--- a/slideshow/slideshow.less
+++ b/slideshow/slideshow.less
@@ -56,7 +56,7 @@
 }
 
 .slideshow-slider {
-  bottom: 50px;
+  bottom: 0px;
   color: white;
   font-family: 'Helvetica', sans-serif;
   position: absolute;
